# tiny_c_compiler

./: .gitignore  Cargo.toml  README.md  before_commit.sh  test.sh
.github/workflows/: rust.yml
src/: ast.rs  codegen.rs  lib.rs  main.rs  parser.rs
src/scanner/: mod.rs
src/stream/: mod.rs
src/string_stream/: mod.rs
tests/: expression.rs
