[package]
name = "tiny_c_compiler"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xiaguan/tiny_c_compiler"
license = "MIT"
authors = ["SuSun"]
description = "A tiny c compiler written in rust"
keywords = ["study", "c", "compiler", "rust"]
categories = ["development-tools::compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "susuncc"
path = "src/main.rs"
